--- a/src/final.html
+++ b/src/final.html
@@ -7,19 +7,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/src/output.css" rel="stylesheet">
+  <link href="/src/animation.css" rel="stylesheet">
 </head>
 
-<body>
-  <!-- 
-  <h1 class="text-3xl text-myDarkBlue font-bold underline">Hello world!</h1>
-  <h1 class="text-3xl text-myBrightBlue font-bold underline">Hello world!</h1>
-  <h1 class="text-3xl text-myDeepBlue font-bold underline">Hello world!</h1>
-  <h1 class="text-3xl text-myLightBlue font-bold underline">Hello world!</h1>
-  <h1 class="text-3xl text-myGray font-bold underline">Hello world!</h1>
-  <h1 class="text-3xl text-mydarkGray font-bold underline">Hello world!</h1> -->
-    <div class="relative container mx-auto p-6"></div>
+<body class="bg-slate-100">
+  
+  <h1 class="text-3xl text-myDarkBlue font-bold underline">myDarkBlue</h1>
+  <h1 class="text-3xl text-myBrightBlue font-bold underline">myBrightBlue</h1>
+  <h1 class="text-3xl text-myDeepBlue font-bold underline">myDeepBlue </h1>
+  <h1 class="text-3xl text-myLightBlue font-bold underline">myLightBlue</h1>
+  <h1 class="text-3xl text-myGray font-bold underline">myGray</h1>
+  <h1 class="text-3xl text-mydarkGray font-bold underline">mydarkGray</h1>
+
+
+  <div class="relative container mx-auto p-6"></div>
   <header class="flex justify-between border-2 border-myDarkBlue border-solid">
     <!-- border-2 border-solid // border-dashed // border-dotted // border-double  -->
+    <!-- border-2 animation.css-solid // border-dashed // border-dotted // border-double  -->
 
     <!-- logo  -->
     <img src="#" alt="">
@@ -28,18 +32,20 @@
       <a href="#">Projects</a>
       <a href="#">Price</a>
       <a href="#">Help</a>
-      <button class="px-2 py-4 border">Связь с нами</button>
+      <div class="btn-around">
+        <button class="px-2 py-4 border">Связь с нами</button>
+      </div>
     </nav>
   </header>
-</div>
+  </div>
 
   <!-- hero  -->
   <section id="hero" class="grid grid-cols-1 md:grid-cols-2">
     <!-- border-solid border-2  -->
     <div class="flex flex-col justify-between">
       <div>
-        <p> Design of us</p>
-        <h1>Lorem ipsum dolor sit amet.</h1>
+        <p> мы приехали в среднюю Азию и  поработали над тем, чтобы Вы могли  </p>
+        <h1>Дикий и безопасный Таджикистан</h1>
         <button>Knopka</button>
       </div>
       <div>
